# joppylib

./: CHANGELOG.md  README.md  pyproject.toml
docs/dev/: improvements_report_2026-03.md  semantic-versioning-in-practice.md  testing_guide.md
docs/howto/: python_testing_setup.md  testing_concepts.md
src/joppylib/: __init__.py  api.py  api_client.py  config.py  connection.py  defaults.py  exceptions.py  joplin_client.py
tests/: conftest.py  test_api_client.py  test_config.py  test_connection.py  test_joplin_client.py
