[project]
name = "joppylib"
version = "0.1.0a5"
description = "A thin abstraction layer over the Joplin Data API"
readme = "README.md"
authors = [
    { name = "Jeroen Kroesen", email = "jeroen@kroesen.nu" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
