[project]
name = "joppylib"
version = "0.1.0a11"
description = "A thin abstraction layer over the Joplin Data API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jeroen Kroesen", email = "jeroen@kroesen.nu" }
]
keywords = ["joplin", "joplin-api", "notes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "responses>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/jeroenkroesen/joppylib"
Repository = "https://github.com/jeroenkroesen/joppylib"

[tool.pytest.ini_options]
testpaths = ["tests"]
